# fsfw-from-zero

./: .gitignore  .gitmodules  CHALLENGES.md  CHANGELOG.md  CMakeLists.txt  README.md  SPECIFICATION.md  challenges  main-02.cpp  main.cpp  start_main.cpp
01-tasks/01-tasks-solutions/: main-02.cpp
finished/: CMakeLists.txt  main.cpp
mission/: ObjectFactory.cpp  ObjectFactory.h  SystemMessage.cpp  SystemMessage.h  WebcamDeviceHandler.cpp  WebcamDeviceHandler.h
mission/messaging/: MessageTypes.cpp  MessageTypes.h  SystemMessage.cpp  SystemMessage.h
mission/tmtc/: TmtcInfrastructure.cpp  TmtcInfrastructure.h  WebcamCommandingService.cpp  WebcamCommandingService.h
mission/webcam/: WebcamComIF.cpp  WebcamComIF.h  WebcamCookie.cpp  WebcamCookie.h  WebcamDefinitions.cpp  WebcamDefinitions.h  WebcamDeviceHandler.cpp  WebcamDeviceHandler.h
start/: 01-tasks.md  CMakeLists.txt  main.cpp
start/01-tasks-solutions/: main-03.cpp
start/tasks-srcs/: main-04.cpp
test/: webcam.cpp
ws-ipc/: README.md
ws-ipc/ipc-solutions/: main-01.cpp
ws-objects/: README.md
ws-objects-tmtc/: README.md
ws-objects-tmtc/objects-tmtc-solutions/: main-01.cpp  main-02.cpp  main-03.cpp
ws-objects/objects-solutions/: main-01.cpp  main-03.cpp
ws-tasks/: README.md
ws-tasks/tasks-solutions/: main-04.cpp
